# broom

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  TODO.md  bi.opam  broom.opam  build.sh  cl.opam  example.md  options.md
actual/: Abduction.ml  Contract.ml  Formula.ml  Formula1.ml  Formula2.ml  State.ml  Z3-wrapper.ml  Z3wrapper.ml
examples/: 01-circ_dll.c  02-cond.c  03-loop.c  04-nondet_cond.c  05-bitwise.c
experiments/: Program.ml  how_to_run_it  utop-abstraction
scripts/: biabductor  broom  call_graph  contract-generator  generator  json_dumper  run-examples  test
src/: Abduction.ml  ContractGenerator.ml  Z3wrapper.ml  biabductor.ml  broom.ml  dune  test.ml
src/CL/: Msg.ml  Msg.mli  Printer.ml  Printer.mli  Util.ml  Util.mli  dune
src/biabduction/: Abduction.ml  Abduction.mli  Abstraction.ml  Abstraction.mli  CloseLambda.ml  CloseLambda.mli  Close_lambda.ml  Close_lambda.mli  Config.ml  Config.mli  Contract.ml  Contract.mli  Formula.ml  Formula.mli  Simplify.ml  Simplify.mli  SpecTable.ml  SpecTable.mli  State.ml  StateTable.ml  StateTable.mli  SymExecution.ml  SymExecution.mli  Z3wrapper.ml  Z3wrapper.mli  dune
src/cl/: Printer.ml  Printer.mli  Util.ml  Util.mli  dune  make.sh
src/tests/: dlseg-nonshared-unfold-1.ml  dlseg-shared-pto-dlseg-fold-1.ml  dlseg-shared-pto-pto-fold-1.ml  shared-pointsto-abstraction.ml  shared-pto-pto-fold-1.ml  shared-pto-pto-fold-4.ml  shared-pto-pto-fold-7.ml  shared-pto-pto-fold-fail.ml  shared-slseg-unfold.ml  shared-slseg-unfold1.ml  shared-var-fold-3.ml  shared-var-fold-5.ml  shared-var-fold-6.ml  slseg-nonshared-1.ml  slseg-nonshared-2.ml  slseg-nonshared-pto-pto-fold.ml  slseg-nonshared-slseg-slseg-fold.ml  slseg-shared-pto-pto-fold-1.ml  slseg-shared-pto-pto-fold-2.ml  slseg-shared-pto-pto-fold-fail.ml  slseg-shared-pto-slseg-fold-1.ml  slseg-shared-unfold-1.ml  slseg-shared-unfold-2.ml  slseg-shared-unfold-3.ml
src/unused/: MyBoolean.ml
tests/: abort.c  accessors.c  alias-10.c  alias-10_gcc.c  arithmetic.c  call-01-ok.c  call-01-ok_gcc.c  cg.c  circ_dll_simple-err.c  circ_dll_simple.c  circ_sll_embeded2.c  circ_sll_embeded_int.c  dll-calloc.c  dll-create-while-nondet.c  dll-create.c  dll-create_while-nondet.c  dll-data-while-nondet.c  dll-sll.c  dll-trans_gcc.c  dll-traverse-while-nondet.c  dll-traverse_while-nondet.c  dll-traverse_while-nondet_gcc-err.c  dll-traverse_while-nondet_gcc.c  easy-01-ok.c  easy-01b-err.c  easy-01b-ok.c  easy-02-err.c  easy-03-err.c  easy-03-ok.c  easy-04-err.c  easy-04b-err.c  easy-05-err.c  easy-05b-err.c  easy-05c-err.c  easy-07-err.c  easy-08-err.c  easy-08-ok.c  easy-08b-ok.c  easy-09-err.c  easy-10-err.c  (+56 more)
tests/allocators/: README.txt
tests/ideas/: arena-orig.c  intrusive-list-minimal-example.c  intrusive-list-minimal-example2.c  intrusive-list-minimal-example3.c  intrusive-list-person.h  intrusive-list.c  intrusive-list.h  intrusive.c  intrusive.h  intrusive_cfg.c  intrusive_cfg.h  intrusive_cfg_minimal_example.c  intrusive_cfg_minimal_example2.c  intrusive_cfg_minimal_example3.c  intrusive_cfg_top.c  plarena-orig.c  plarena-preprocessed-test.c  test_intrusive.c  test_intrusive_cfg.c  test_intrusive_person.c  test_intrusive_predator.c  test_intrusive_single_file.c
tests/json-side-effect/: easy-bad.json  easy.json  easy.txt
tests/linux-list/: linux-list-t1+traverse.c  linux-list-t1.c  linux-list-t2-err.c  linux-list-t2.c  linux-list.c  linux-lists-err.c  predator-test-0077_gcc.c  predator-test-0156-no-include.c
tests/lists/: circ_dll_embeded_int.c  circ_dll_simple.c  dll-traverse_while-nondet_gcc-err.c  dll-traverse_while-nondet_gcc.c.ast.sh  dll.h  sll-loop.c  sll-main_gcc.c  (+2 more)
z3-experiments/: experiments.ml
(+58 files in other folders)
