opam-version: "1.2.2"

name: "bi"

synopsis: ""
description: ""

maintainer: ""
authors: [
  ""
  ""
]

homepage: "https://pajda.fit.vutbr.cz/rogalew/bi-work"
bug-reports: "https://pajda.fit.vutbr.cz/rogalew/bi-work/issues"

depends: [
  "atd"
  "core"
  "cppo"
  "dune"
  "ocaml"
  "qtest"
  "z3"
]
