opam-version: "2.0"

name: "bi"

synopsis: "A static analyzer for C"

maintainer: "Bi team"
authors: [
  ""
  ""
]

homepage: "https://pajda.fit.vutbr.cz/rogalew/bi-work"
bug-reports: "https://pajda.fit.vutbr.cz/rogalew/bi-work/issues"

depends: [
  "atdgen" {>="2.0.0"}
  "core"
  "cppo"
  "dune"
  "ocaml"
  "qtest"
  "z3" {= "4.8.1"}
  "utop" {with-test}
]
