(library
  (name broom)
  (public_name broom)
  (flags :standard)
  (libraries core z3 CL biabd)
  (modules :standard \ BroomTool test))

(executable
  (name BroomTool)
  (public_name broom)
  (libraries broom)
  (modules BroomTool))

(executable
  (name test)
  (public_name broom)
  (libraries core CL z3 biabd)
  (modules test))
