; Copyright (C) Broom team
;
; You should have received a copy of the GNU General Public License
; along with this program.  If not, see <https://www.gnu.org/licenses/>.

(library
  (name broom)
  (public_name broom)
  (flags :standard)
  (libraries core z3 CL biabd)
  (modules :standard \ broom test))

(executable
  (name broom)
  (public_name broom)
  (libraries broom)
  (modules broom))

(executable
  (name test)
  (public_name broom)
  (libraries core CL z3 biabd)
  (modules test))
