; Copyright (C) Broom team
;
; You should have received a copy of the GNU General Public License
; along with this program.  If not, see <https://www.gnu.org/licenses/>.

(rule
  (targets Version.ml)
  (action
    (with-stdout-to Version.ml
     (bash "echo \"let curr=\\\"%{version:broom}\\\"\n\""))))

(library
  (name biabd)
  (public_name broom.biabd)
  (flags :standard)
  (libraries z3 CL)
  (inline_tests (backend qtest.lib))
)
